--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,12 @@
     --main-border: 1px solid rgba(0, 0, 0, 0.294);
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
 /* ============================================================= */
 /* UTILITY                                                        */
 /* ============================================================= */
@@ -22,9 +28,59 @@ nav {
     padding: 15px 10px;
     align-items: center;
     border-bottom: var(--main-border);
+    background: white;
 }
 /* ============================================================= */
 /* NAVBAR                                                        */
+/* ============================================================= */
+
+/* ============================================================= */
+/* MAIN                                                          */
+/* ============================================================= */
+main {
+    padding-top: 4rem;
+}
+/* ============================================================= */
+/* MAIN                                                          */
+/* ============================================================= */
+
+/* ============================================================= */
+/* CHAT                                                          */
+/* ============================================================= */
+.chat-content ul {
+    list-style: none;
+    width: 100%;
+    height: 80vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.chat-content ul li {
+    width: 100%;
+    background: white;
+    display: flex;
+    padding: 1rem 0.7rem;
+    background: white;
+    border-radius: 4px;
+}
+
+.chat-content ul li i {
+    font-size: 2.2rem;
+    margin-right: 0.5rem;
+}
+
+.chat-content ul li .chat-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.chat-content ul li .chat-info .friend-info {
+    display: flex;
+    flex-direction: column;
+}
+/* ============================================================= */
+/* CHAT                                                          */
 /* ============================================================= */
 
 /* ============================================================= */
@@ -37,6 +93,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     padding: 15px 0;
+    background: white;
 }
 
 footer .category {
