--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -164,6 +164,25 @@ main {
     bottom: 3px;
     font-size: 3rem;
 }
+
+.chat-content .new-chat-btn {
+    position: fixed;
+    right: 10vw;
+    bottom: 13vh;
+    background: var(--main-color);
+    display: flex;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    color: rgb(252, 251, 251);
+    border-radius: 4px;
+}
+
+.chat-content .new-chat-btn i {
+    font-size: 1.5rem;
+}
 /* ============================================================= */
 /* CHAT                                                          */
 /* ============================================================= */
