--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -183,6 +183,10 @@ main {
 .chat-content .new-chat-btn i {
     font-size: 1.5rem;
 }
+
+.chat-content .friend-list {
+    height: 89vh;
+}
 /* ============================================================= */
 /* CHAT                                                          */
 /* ============================================================= */
