--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,223 +1,3 @@
-:root {
-    --main-color: #ef983b;
-    --main-border: 1px solid rgba(0, 0, 0, 0.294);
-}
-
-body {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
-
-/* ============================================================= */
-/* UTILITY                                                        */
-/* ============================================================= */
-.outline-main-color {
-    border: 1px solid var(--main-color);
-}
-/* ============================================================= */
-/* UTILITY                                                        */
-/* ============================================================= */
-
-/* ============================================================= */
-/* NAVBAR                                                        */
-/* ============================================================= */
-nav {
-    display: flex;
-    width: 100%;
-    padding: 15px 10px;
-    align-items: center;
-    border-bottom: var(--main-border);
-    background: white;
-    align-items: center;
-}
-/* ============================================================= */
-/* NAVBAR                                                        */
-/* ============================================================= */
-
-/* ============================================================= */
-/* MAIN                                                          */
-/* ============================================================= */
-main {
-    padding-top: 4rem;
-}
-/* ============================================================= */
-/* MAIN                                                          */
-/* ============================================================= */
-
-/* ============================================================= */
-/* CHAT                                                          */
-/* ============================================================= */
-.chat-content ul {
-    list-style: none;
-    width: 100%;
-    height: 80vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.chat-content ul li a {
-    width: 100%;
-    background: white;
-    display: flex;
-    padding: 1rem 0.7rem;
-    background: white;
-    border-radius: 4px;
-    text-decoration: none;
-    color: black;
-}
-
-.chat-content ul li a i {
-    font-size: 2.2rem;
-    margin-right: 0.5rem;
-    color: var(--main-color);
-}
-
-.chat-content ul li .chat-info {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.chat-content ul li .chat-info .friend-info {
-    display: flex;
-    flex-direction: column;
-}
-
-.chat-footer {
-    width: 100%;
-    height: 13vh;
-    border-top: var(--main-border);
-    background: white;
-}
-
-.chat-footer .send-chat-btn {
-    width: 40px;
-    height: 40px;
-    background: var(--main-color);
-    border: none;
-    border-radius: 10px;
-    padding: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.chat-footer .send-chat-btn i {
-    font-size: 1.3rem;
-}
-
-.chat-footer textarea {
-    height: 50px;
-}
-
-.show-chat-content ul {
-    list-style: none;
-    width: 100%;
-    height: 77vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background: white;
-    display: flex;
-    flex-direction: column-reverse;
-}
-
-.show-chat-content ul li {
-    width: 100%;
-    background: white;
-    display: flex;
-    padding: 1rem 0.7rem;
-    position: relative;
-}
-
-.show-chat-content ul li.my-message {
-    justify-content: flex-end;
-}
-
-.show-chat-content ul li .chat-box {
-    min-width: 100px;
-    max-width: 80%;
-    padding: 0.8rem;
-}
-
-.show-chat-content ul li.my-message .chat-box {
-    background: var(--main-color);
-    color: rgb(252, 251, 251);
-}
-
-.show-chat-content ul li.my-message .fa-solid.fa-sort-down {
-    color: var(--main-color);
-    position: absolute;
-    right: 18px;
-    bottom: 3px;
-    font-size: 3rem;
-}
-
-.show-chat-content ul li.message .chat-box {
-    background: rgb(207, 207, 207);
-}
-
-.show-chat-content ul li.message .fa-solid.fa-sort-down {
-    color: rgb(207, 207, 207);
-    position: absolute;
-    left: 18px;
-    bottom: 3px;
-    font-size: 3rem;
-}
-
-.chat-content .new-chat-btn {
-    position: fixed;
-    right: 10vw;
-    bottom: 13vh;
-    background: var(--main-color);
-    display: flex;
-    width: 50px;
-    height: 50px;
-    text-decoration: none;
-    justify-content: center;
-    align-items: center;
-    color: rgb(252, 251, 251);
-    border-radius: 4px;
-}
-
-.chat-content .new-chat-btn i {
-    font-size: 1.5rem;
-}
-
-.chat-content .friend-list {
-    height: 89vh;
-}
-/* ============================================================= */
-/* CHAT                                                          */
-/* ============================================================= */
-
-/* ============================================================= */
-/* FOOTER                                                        */
-/* ============================================================= */
-footer {
-    width: 100%;
-    border-top: var(--main-border);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 15px 0;
-    background: white;
-}
-
-footer .category {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgb(46, 46, 46);
-}
-
-footer .category i {
-    font-size: 1.3rem;
-}
-
-footer .category.active {
-    color: var(--main-color);
-}
-/* ============================================================= */
-/* FOOTER                                                        */
-/* ============================================================= */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
