--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -333,6 +333,18 @@ footer .category.active {
     background: black;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.vicall-room .remote-user .user-info {
+    text-align: center;
+    padding: 3.5rem 0;
+}
+
+.vicall-room .remote-user .user-info i {
+    font-size: 8rem;
+    margin-bottom: .5rem;
 }
 
 .vicall-room .local-user video, 
@@ -340,6 +352,9 @@ footer .category.active {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .vicall-room .local-user video {
