--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -378,7 +378,7 @@ footer .category.active {
     position: fixed;
     bottom: 0;
     left: 0;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 10px;
 }
 
