--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -379,6 +379,7 @@ footer .category.active {
     bottom: 0;
     left: 0;
     justify-content: space-evenly;
+    align-items: center;
     padding: 10px;
 }
 
