--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -399,6 +399,27 @@ footer .category.active {
     padding: 12px;
 }
 
+.vicall-room .local-user .off-cam, 
+.vicall-room .remote-user .off-cam {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: black;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vicall-room .local-user .off-cam i {
+    font-size: 1.5rem;
+}
+
+.vicall-room .remote-user .off-cam i {
+    font-size: 2.5rem;
+}
+
 @keyframes faded {
     from {
         opacity: 0;
