Make a profile page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -497,3 +497,18 @@ footer .category.active {
 /* ============================================================= */
 /* VIDEO CALL                                                    */
 /* ============================================================= */
+
+/* ============================================================= */
+/* PROFILE                                                       */
+/* ============================================================= */
+.profile .user-info {
+    padding: 1rem;
+}
+
+.profile .user-info i {
+    font-size: 3rem;
+    margin-right: 0.5rem;
+}
+/* ============================================================= */
+/* PROFILE                                                       */
+/* ============================================================= */
